--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -2,5 +2,26 @@
 - hosts: raspberry-pi
   become : yes
   tasks: 
-    - name: Update raspi apt
-      apt: update_cache=yes force_apt_get=yes cache_valid_time=3600
+    - name: Update apt repository
+      apt: 
+        update_cache=yes 
+        force_apt_get=yes 
+        cache_valid_time=3600
+      tags: update
+
+    - name: Upgrade apt repository
+      apt: 
+        upgrade=dist 
+        force_apt_get=yes
+      tags: update
+
+    - name: Check disk space status
+      command: df -h
+      register: disk_space_status
+      tags: status
+
+    - name: Display disk space status
+      debug:
+        var: disk_space_status.stdout_lines
+      when: disk_space_status is defined
+      tags: status
