--- a/ansible/tasks/docker.yml
+++ b/ansible/tasks/docker.yml
@@ -23,7 +23,7 @@
     
 - name: Download docker GPG key
   shell: |
-    curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /etc/apt/keyrings/docker.gpg
+    curl -fsSL https://download.docker.com/linux/debian/gpg | sudo gpg --dearmor -o /etc/apt/keyrings/docker.gpg
     sudo chmod a+r /etc/apt/keyrings/docker.gpg
   args:
     executable: /bin/bash
@@ -33,7 +33,7 @@
   blockinfile:
     path: /etc/apt/sources.list.d/docker.list
     block: |
-      deb [arch={{ ansible_architecture }} signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu {{ ansible_distribution_release }} stable
+      deb [arch="$(dpkg --print-architecture)" signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/debian "$(. /etc/os-release && echo "$VERSION_CODENAME")" stable
     create: yes
   tags: docker
 
@@ -50,4 +50,10 @@
       - docker.io
       - docker-compose
     state: present
+  tags: docker
+
+- name: Create docker folder
+  file: 
+    name: ~/docker-compose
+    state: directory
   tags: docker
