Configure InfluxDB TLS/SSL with selfsigned certificates

--- a/ansible/tasks/influxdb.yml
+++ b/ansible/tasks/influxdb.yml
@@ -25,9 +25,10 @@
 - name: Pause for 5 seconds
   ansible.builtin.pause:
     seconds: 5
+  tags: influxdb
 
 - name: Exec InfluxDB setup
-  command: docker exec influxdb influx setup -u {{ influx_root_name }} -p {{ influx_root_password }} -o {{ influx_organization }} -b {{ influx_bucket }} --force
+  command: docker exec influxdb influx setup -u {{ influx_root_name }} -p {{ influx_root_password }} -o {{ influx_organization }} -b {{ influx_bucket }} --force --host https://localhost:8086 --skip-verify
   tags: influxdb  
   become: yes
   ignore_errors: yes
